# pub

./: Makefile  README.md  opencode.json  package-lock.json  package.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
mcp-node-echo/: Dockerfile  README.md
npx-hello/: README.md  package.json
py-hello/: README.md  pyproject.toml
py-hello/src/py_hello/: __init__.py
